# SHALL-firmware

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  FFT.cpp  FFT.h  app_driver.cpp  app_main.cpp  app_priv.h  display.cpp  display.h  freq_color_mapper.c  freq_color_mapper.h  gpio_toggle.cpp  gpio_toggle.h  idf_component.yml  jetson_uart.c  jetson_uart.cpp  jetson_uart.h  led_strip_control.cpp  led_strip_control.h  secrets_template.h  weather.c  weather.h  web_server.cpp  web_server.h
