idf_component_register(SRCS
                       "app_main.cpp"
                       "display.cpp"
                       "app_driver.cpp"
                       "FFT.cpp"
                       "jetson_uart.cpp"
                       "led_strip_control.cpp"
                       "weather.c"
                       "web_server.cpp"
                       "freq_color_mapper.c"
                       PRIV_INCLUDE_DIRS  "." "${ESP_MATTER_PATH}/examples/common/utils")

if (CONFIG_ENABLE_SET_CERT_DECLARATION_API)
    target_add_binary_data(${COMPONENT_TARGET} "certification_declaration/certification_declaration.der" BINARY)
endif()

set_property(TARGET ${COMPONENT_LIB} PROPERTY CXX_STANDARD 17)
target_compile_options(${COMPONENT_LIB} PRIVATE "-DCHIP_HAVE_CONFIG_H")
